--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,21 @@ html,
 body {
   overflow-x: hidden;
 }
+
+@layer components {
+  .neobrutal {
+    @apply border-black border-5 rounded-md
+           shadow-[5px_5px_0_0_black] 
+           transition-all duration-300 ease-in-out
+           transform;
+  }
+
+  .neobrutal:hover {
+    @apply shadow-none translate-x-[5px] translate-y-[5px];
+  }
+
+  .neobrutal:active {
+    @apply scale-95;
+  }
+}
+
